subiendo primera parte armado de cv

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Gabriela Da Silva
+        </h1>
+        <p>
+         Estudiante de tercer año de la Licenciatura en Informatica en la Universidad de Hurlingham. 
+
+        </p>
+    </header>
+    <main>        
+        <section>
+            <h2>Experiencia</h2>
+            <ul>
+                <li>Proyectos realizados en la facultad</li>
+                <li>Proyectos realizados de manera personal</li>
+                
+            </ul>
+        </section>
+        <section>
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Lenguajes de programación: JavaScript, Python, Java (En aprendizaje)</li>    
+                <li>Herramientas: Git, GitHub</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Proyectos</h2>
+            <ul>
+                <li><a href="https://gabrielafdasilva.github.io/LP-TLOTRFans/" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 1: Proyecto Personal - Page "The Lord of the Ring"</a></li>
+                <li><a href="#" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 2: API REST para un sistema de reservas</a></li>
+                <li><a href="#" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 3: Sitio web personal con portafolio</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
