--- a/index.html
+++ b/index.html
@@ -3,46 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV - Gabriela Da Silva</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>
-            Gabriela Da Silva
-        </h1>
-        <p>
-         Estudiante de tercer año de la Licenciatura en Informatica en la Universidad de Hurlingham. 
+    <div class="container">
+        <header>
+            <h1>Gabriela Da Silva</h1>
+            <p class="subtitle">Estudiante de Licenciatura en Informática</p>
+        </header>
 
-        </p>
-    </header>
-    <main>        
-        <section>
-            <h2>Experiencia</h2>
-            <ul>
-                <li>Proyectos realizados en la facultad</li>
-                <li>Proyectos realizados de manera personal</li>
-                
-            </ul>
-        </section>
-        <section>
-            <h2>Habilidades</h2>
-            <ul>
-                <li>Lenguajes de programación: JavaScript, Python, Java (En aprendizaje)</li>    
-                <li>Herramientas: Git, GitHub</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Proyectos</h2>
-            <ul>
-                <li><a href="https://gabrielafdasilva.github.io/LP-TLOTRFans/" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 1: Proyecto Personal - Page "The Lord of the Ring"</a></li>
-                <li><a href="#" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 2: API REST para un sistema de reservas</a></li>
-                <li><a href="#" class="project-link" target="_blank" rel="noopener noreferrer">Proyecto 3: Sitio web personal con portafolio</a></li>
-            </ul>
-        </section>
-    </main>
-    <footer>
+        <main>
+            <section id="perfil">
+                <h2>Perfil</h2>
+                <p>Estudiante de tercer año en la Universidad de Hurlingham con enfoque en desarrollo de software. Apasionada por crear soluciones web eficientes y en constante aprendizaje de nuevas tecnologías.</p>
+            </section>
 
-    </footer>
+            <section id="tecnologias">
+                <h2>Tecnologías</h2>
+                <ul class="skills-grid">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>Git & GitHub</li>
+                </ul>
+            </section>
+
+            <section id="proyectos">
+                <h2>Proyectos</h2>
+                <article class="project-item">
+                    <h3>The Lord of the Rings Fan Page</h3>
+                    <p>Landing page temática desarrollada para practicar estructuras complejas de CSS y diseño responsive.</p>
+                    <a href="https://gabrielafdasilva.github.io/LP-TLOTRFans/" target="_blank" class="project-link">Ver en GitHub →</a>
+                </article>
+
+                <article class="project-item">
+                    <h3>Proyecto 2</h3>
+                    <p>Descripción breve del proyecto, qué problema resuelve y qué tecnologías usaste.</p>
+                    <a href="#" class="project-link">Ver en GitHub →</a>
+                </article>
+            </section>
+
+            <section id="contacto">
+                <h2>Contacto</h2>
+                <div class="contact-info">
+                    <p>📧 Email: <a href="mailto:tuemail@ejemplo.com">tuemail@ejemplo.com</a></p>
+                    <p>📂 GitHub: <a href="https://github.com/gabrielafdasilva" target="_blank">github.com/gabrielafdasilva</a></p>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2024 Gabriela Da Silva - Hecho con HTML y CSS</p>
+        </footer>
+    </div>
 </body>
 </html>
