se modifica mail

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <section id="contacto">
                 <h2>Contacto</h2>
                 <div class="contact-info">
-                    <p>📧 Email: <a href="mailto:tuemail@ejemplo.com">tuemail@ejemplo.com</a></p>
+                    <p>📧 Email: <a href="mailto:tuemail@ejemplo.com">gabrielafernanda.dasilva@estudiantes.unahur.edu.ar</a></p>
                     <p>📂 GitHub: <a href="https://github.com/gabrielafdasilva" target="_blank">github.com/gabrielafdasilva</a></p>
                 </div>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2024 Gabriela Da Silva - Hecho con HTML y CSS</p>
+            <p>&copy; 2026 Gabriela Da Silva - Hecho con HTML y CSS</p>
         </footer>
     </div>
 </body>
