se sube seccion experiencia academica y segundo proyecto

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
                 </ul>
             </section>
 
+            <section id="experiencia">
+    <h2>Experiencia Relevante</h2>
+    
+    <article class="exp-item">
+        <h3>Desarrollo de Proyectos Académicos | UNHUR</h3>
+        <p class="date">2022 - Presente</p>
+        <ul>
+            <li>Aplicación de lógica de programación y estructuras de datos en proyectos de la Licenciatura.</li>
+            <li>Colaboración en equipos de estudio para la resolución de algoritmos complejos.</li>
+            <li>Implementación de buenas prácticas en maquetación web (HTML/CSS).</li>
+        </ul>
+    </article>
+
+    <article class="exp-item">
+        <h3>Proyectos Independientes</h3>
+        <p class="date">Autodidacta</p>
+        <ul>
+            <li>Diseño y despliegue de sitios web dinamicos utilizando GitHub Pages.</li>
+            <li>Experimentación con diseño responsive y arquitecturas CSS limpias.</li>
+        </ul>
+    </article>
+</section>
+
             <section id="proyectos">
                 <h2>Proyectos</h2>
                 <article class="project-item">
@@ -39,9 +62,9 @@
                 </article>
 
                 <article class="project-item">
-                    <h3>Proyecto 2</h3>
-                    <p>Descripción breve del proyecto, qué problema resuelve y qué tecnologías usaste.</p>
-                    <a href="#" class="project-link">Ver en GitHub →</a>
+                    <h3>LibroJuego - Elige tu Aventura</h3>
+                    <p>Proyecto de juego interactivo desarrollado con HTML, CSS y JavaScript para explorar diferentes historias y decisiones narrativas.</p>
+                    <a href="https://libro-elige-tu-aventura-6q6b.vercel.app/" target="_blank" class="project-link">Ver en Vercel →</a>
                 </article>
             </section>
 
